# 4everCode

./: .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  404.html  Advanced Quantum Entanglement - The Art of Temporal Interconnection.md  CHANGELOG.md  CHRONOLOG.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Chronoscript Standard Library Reference.md  Chronovyan_Documentation_Index.md  Chronovyan_Glossary.md  Complex Quantum Operations - The Art of Temporal Mastery.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_METADATA.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NEW_STRUCTURE.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SimpleLexer.cpp  SimpleLexer.h  TIMELINE.md  TUTORIAL_ROADMAP.md  TalesFromTheTapestry.md  _config.yml  build.ps1  build.sh  build_and_run_test_lexer.bat  build_and_test.ps1  build_simple.ps1  build_with_mingw.ps1  (+50 more)
examples/: CMakeLists.txt  README.md  README_QUESTS.md  advanced_optimization_demo.cpp  advanced_resource_optimization.chron  advanced_resource_visualizer_demo.cpp  auto_optimizer_demo.chron  auto_optimizer_demo.cvy  automatic_resource_optimization_demo.cpp  basic_usage.py  compiler_demo.sh  debt_strategy_demo.cpp  digit_test.chron  digit_test.cvy  digit_test_utf8.chron  digit_test_utf8.cvy  event_synchronization.py  example_mapping.md  exploration_demo.cpp  fibonacci_sequence.chron  first_fracture_simulation.chron  hello.chron  hello_timeline.chron  hello_timeline_utf8.chron  hello_world.chron  hello_world_utf8.chron  index.html  loot_demo.chron  main_test.chron  main_test.cvy  map_demo.cpp  minimal.chron  paradox_demo.cpp  pattern_demo.cpp  plot_example.cpp  quantum_weaver.chron  resource_demo.cpp  resource_optimization_test.chron  resource_optimization_test.cvy  resource_visualization_demo.chron  (+34 more)
examples/00_prologue/: 01_rift_calibration.chron  01_rift_calibration.cvy  01_rift_calibration.expected
examples/01_beginner/: 01_hello_world.chron  01_hello_world.cvy  02_hello_world.chron  02_hello_world.cvy  03_hello_world_utf8.chron  03_hello_world_utf8.cvy  03_hello_world_utf8.expected  04_minimal.chron  04_minimal.cvy  05_simple_test.chron  05_simple_test.cvy  06_test.chron  06_test.cvy  07_conditions_and_logic.chron  07_conditions_and_logic.cvy  07_custom_types.chron  07_custom_types.cvy  08_digit_test.chron  08_functions_and_parameters.chron  08_functions_and_parameters.cvy  09_digit_test_utf8.chron  09_digit_test_utf8.cvy  10_main_test.chron  10_main_test.cvy  11_hello_timeline.chron  11_hello_timeline.cvy  12_hello_timeline_utf8.chron  13_nested_conditionals.chron  13_nested_conditionals.cvy  14_basic_functions_with_parameters.chron  14_basic_functions_with_parameters.cvy  15_arrays_and_collections.chron  15_arrays_and_collections.cvy  README.md  act1_ch1_ex1_sensor_reading.chron  act1_ch1_ex1_sensor_reading.cvy  act1_ch1_ex2_environmental_data_translation.chron  act1_ch1_ex2_environmental_data_translation.cvy  act1_ch2_ex1_core_regulation_protocol.chron  act1_ch2_ex1_core_regulation_protocol.cvy  (+46 more)
examples/02_intermediate/: 01_temporal_branching.chron  01_temporal_branching.cvy  02_temporal_branching.chron  03_temporal_branching_utf8.chron  03_temporal_branching_utf8.cvy  04_temporal_debt_test.chron  05_resource_visualization_demo.chron  05_resource_visualization_demo.cvy  06_resource_optimization_test.chron  07_timeline_merge.chron  08_loot_demo.chron  08_loot_demo.cvy  09_error_handling.chron  09_error_handling.cvy  09_module_integration.chron  09_module_integration.cvy  10_failsafe_development.chron  (+18 more)
lexer_test/: CMakeLists.txt  test_cases.txt  test_lexer.cpp
src/: CMakeLists.txt  advanced_optimization_algorithms.cpp  advanced_optimization_algorithms_part2.cpp  advanced_temporal_control.cpp  automatic_resource_optimizer.cpp  chronovyan.cpp  custom_type_system.cpp  export_demo.cpp  graphical_resource_visualizer.cpp  loot.cpp  loot_system.cpp  map_type.cpp  metric_collector.cpp  ml_model.cpp  ml_model.hpp  mode_decision_engine.cpp  mode_decision_engine.hpp  multi_dimensional_vector.cpp  notification_service.cpp  real_time_optimizer.cpp  rebel_operation.cpp  repayment_strategies.cpp  resource_manager.cpp  resource_optimizer.cpp  resource_processor.cpp  resource_visualization.cpp  resource_visualization_compat.cpp  resource_visualization_test_fix.cpp  run_chronovyan.cpp  state_controller.cpp  state_controller.h  state_controller.hpp  temporal_debt_alert_system.cpp  temporal_debt_benchmark.cpp  temporal_debt_tracker.cpp  temporal_map.cpp  temporal_runtime.cpp  temporal_sequence.cpp  temporal_synchronizer.cpp  temporal_synchronizer_impl.cpp  (+6 more)
test_lexer/: CMakeLists.txt  build_and_test.ps1  chronoscript_lexer_test.cpp  lexer_comprehensive_test.cpp  run_tests.ps1  simple_lexer_test.cpp  test.chron  test_lexer.cpp
test_parser/: CMakeLists.txt  lexer_test.cvy  minimal_parser_test.cpp  string_test.cvy  test.chron  test.cvy  test_lexer.cpp  test_lexer_standalone.cpp
tests/: AdvancedControlFlowTest.cpp  CMakeLists.txt  ExpressionVisitorTests.cpp  InterpreterComponentsIntegrationTest.cpp  ResourceManagerTests.cpp  StatementVisitorTests.cpp  TemporalVisitorTests.cpp  __init__.py  advanced_temporal_control_test.cpp  ast_printer_test.cpp  automatic_resource_optimizer_test.cpp  basic_env_test.cpp  branch_timeline_test.cvy  character_literal_test.cpp  chronovyan_test.cpp  chronovyan_test_runner.cpp  conftest.py  core_minimal_test.cpp  core_resource_optimizer_test.cpp  debt_visualization_test.cpp  debt_viz_test_harness.cpp  map_type_test.cpp  metric_collector_mode_decision_integration_test.cpp  metric_collector_test.cpp  minimal_env_test.cpp  minimal_test.cpp  ml_optimizer_smoke_test.cpp  multi_dimensional_vector_test.cpp  parallel_execution_test.cvy  parser_test_advanced_constructs.cpp  parser_test_legacy_constructs.cpp  real_time_dashboard_test.cpp  resource_export_test.cpp  resource_optimization_test.cpp  resource_optimizer_test.cpp  resource_processor_test.cpp  resource_tracker_test.cpp  resource_visualization_test.cpp  resource_visualizer_test.cpp  rewind_flow_manual_test.cpp  (+30 more)
(+1274 files in other folders)
