[metadata]
description-file = README.md

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = .git,__pycache__,build,dist,.venv,.mypy_cache
per-file-ignores =
    # Allow star imports in __init__.py
    __init__.py: F403,F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[coverage:run]
source = chronovyan
branch = True

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 90

exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    @abstractmethod
    @property
    @classmethod
    @staticmethod
    def __init__
    # type: ignore
    # TODO:
